--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 RimTalkMainModule/
 Source/obj/
 rimtalk/
+DeleteReferenceVoice.md
+GetReferenceVoiceList.md
+ReferenceVoiceUpload.md
+SiliconFlowTTSModelGuide.md
+TTSRequest.md
