--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ GetReferenceVoiceList.md
 ReferenceVoiceUpload.md
 SiliconFlowTTSModelGuide.md
 TTSRequest.md
+Textures/UI/ToggleButton.dds.zstd
+Textures/UI/VoiceSettings.dds.zstd
