--- a/Source/RimTalk.TTS.csproj
+++ b/Source/RimTalk.TTS.csproj
@@ -37,7 +37,7 @@
     <!-- Reference to RimTalk mod assembly for compilation (provided by game/mod at runtime) -->
     <ItemGroup>
         <Reference Include="RimTalk">
-            <HintPath>D:\steam\steamapps\common\RimWorld\RimTalk-main\1.6\Assemblies\RimTalk.dll</HintPath>
+            <HintPath>D:\steam\steamapps\common\RimWorld\Mods\rimtalk\1.6\Assemblies\RimTalk.dll</HintPath>
             <!-- Do not copy the assembly into our output; the game loads mod assemblies from its folder. -->
             <Private>false</Private>
         </Reference>
